# sigmaepsilon

./: .buildinfo  README.md  genindex.html  global_refs.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: global_refs.doctree  index.doctree
.doctrees/developer_guide/: dev.coding.doctree  dev.documenting.doctree  dev.enviroment.doctree  dev.installation.doctree  dev.overview.doctree  dev.package_management.doctree  dev.poetry.doctree  dev.testing.doctree  dev.versioning.doctree  dev.workflow.doctree  dev_workflow.doctree  index.doctree
.doctrees/user_guide/: index.doctree
.github/workflows/: page.yaml
_sources/: global_refs.rst.txt  index.rst.txt
_sources/developer_guide/: dev.documenting.md.txt  dev.installation.rst.txt  dev.overview.rst.txt  dev.package_management.rst.txt  dev.testing.rst.txt  dev.versioning.md.txt  dev.versioning.rst.txt  dev.workflow.md.txt  index.rst.txt
_sources/user_guide/: index.rst.txt
developer_guide/: dev.coding.html  dev.documenting.html  dev.enviroment.html  dev.installation.html  dev.overview.html  dev.package_management.html  dev.poetry.html  dev.testing.html  dev.versioning.html  dev.workflow.html  dev_workflow.html  index.html
docs/source/: about.rst  conf.py  global_refs.rst  index.rst  solutions.rst
docs/source/developer_guide/: dev.coding.rst  dev.documenting.rst  dev.enviroment.rst  dev.package_management.rst  dev.poetry.md  dev.quality.md  dev.testing.md  dev.versioning.rst  dev_workflow.md  index.rst
docs/source/user_guide/: index.rst
user_guide/: index.html
