[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigmaepsilon"
package-mode = false
license = "MIT"
keywords = ["computational engineering"]
homepage = "https://github.com/sigma-epsilon/sigmaepsilon"
repository = "https://github.com/sigma-epsilon/sigmaepsilon"
documentation = "https://sigmaepsilon.readthedocs.io/en/latest/?badge=latest"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.docs.dependencies]
ipython = "^8.21.0"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.3"
sphinx-gallery = "^0.15.0"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-bibtex = "^2.6.2"
nbsphinx-link = "^1.3.0"
sphinxcontrib-svg2pdfconverter = "^1.2.2"
sphinx-inline-tabs = "^2023.4.21"
pydata-sphinx-theme = "^0.15.2"
sphinx-design = "^0.6.1"
